--- a/ZoomAndroid/res/layout-normal/page_prevoz.xml
+++ b/ZoomAndroid/res/layout-normal/page_prevoz.xml
@@ -57,8 +57,9 @@
 
                             <ImageView
                                 android:id="@+id/imageViewIcon2"
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
+	                            android:layout_width="match_parent"
+	                            android:layout_height="0dp"
+	                            android:gravity="center_horizontal"
                                 android:layout_weight="1"
                                 android:scaleType="fitCenter"
                                 android:src="@drawable/taxi_256" />
@@ -92,8 +93,9 @@
 
                             <ImageView
                                 android:id="@+id/imageViewIcon1"
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
+	                            android:layout_width="match_parent"
+	                            android:layout_height="0dp"
+	                            android:gravity="center_horizontal"
                                 android:layout_weight="1"
                                 android:scaleType="fitCenter"
                                 android:src="@drawable/bus_256" />
@@ -126,8 +128,9 @@
 
                                     <ImageView
                                         android:id="@+id/imageViewIcon8"
-                                        android:layout_width="fill_parent"
-                                        android:layout_height="fill_parent"
+			                            android:layout_width="match_parent"
+			                            android:layout_height="0dp"
+			                            android:gravity="center_horizontal"
                                         android:layout_weight="1"
                                         android:scaleType="fitCenter"
                                         android:src="@drawable/metro_256" />
@@ -161,8 +164,9 @@
 
                                     <ImageView
                                         android:id="@+id/ImageView01"
-                                        android:layout_width="fill_parent"
-                                        android:layout_height="fill_parent"
+			                            android:layout_width="match_parent"
+			                            android:layout_height="0dp"
+			                            android:gravity="center_horizontal"
                                         android:layout_weight="1"
                                         android:scaleType="fitCenter"
                                         android:src="@drawable/train_256" />
@@ -239,8 +243,9 @@
 
                             <ImageView
                                 android:id="@+id/imageViewIcon3"
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
+	                            android:layout_width="match_parent"
+	                            android:layout_height="0dp"
+	                            android:gravity="center_horizontal"
                                 android:layout_weight="1"
                                 android:scaleType="fitCenter"
                                 android:src="@drawable/rentacar_256" />
@@ -277,8 +282,9 @@
 
                             <ImageView
                                 android:id="@+id/imageViewIcon4"
-                                android:layout_width="wrap_content"
-                                android:layout_height="fill_parent"
+	                            android:layout_width="match_parent"
+	                            android:layout_height="0dp"
+	                            android:gravity="center_horizontal"
                                 android:layout_weight="1"
                                 android:scaleType="fitCenter"
                                 android:src="@drawable/rentascooter_256" />
@@ -323,8 +329,9 @@
 
                                     <ImageView
                                         android:id="@+id/imageViewIcon7"
-                                        android:layout_width="fill_parent"
-                                        android:layout_height="fill_parent"
+			                            android:layout_width="match_parent"
+			                            android:layout_height="0dp"
+			                            android:gravity="center_horizontal"
                                         android:layout_weight="1"
                                         android:scaleType="fitCenter"
                                         android:src="@drawable/renta_256" />
@@ -358,8 +365,9 @@
 
                                     <ImageView
                                         android:id="@+id/imageViewIcon5"
-                                        android:layout_width="fill_parent"
-                                        android:layout_height="fill_parent"
+			                            android:layout_width="match_parent"
+			                            android:layout_height="0dp"
+			                            android:gravity="center_horizontal"
                                         android:layout_weight="1"
                                         android:scaleType="fitCenter"
                                         android:src="@drawable/airtraffic_256" />
