--- a/ZoomAndroid/res/layout-normal/page_smestaj.xml
+++ b/ZoomAndroid/res/layout-normal/page_smestaj.xml
@@ -57,8 +57,9 @@
 
 	                        <ImageView
 	                            android:id="@+id/imageViewIcon1"
-	                            android:layout_width="wrap_content"
-	                            android:layout_height="wrap_content"
+	                            android:layout_width="match_parent"
+	                            android:layout_height="0dp"
+	                            android:gravity="center_horizontal"
 	                            android:layout_weight="1"
 	                            android:scaleType="fitCenter"
 	                            android:src="@drawable/hotels_256" />
@@ -94,8 +95,9 @@
 
 	                        <ImageView
 	                            android:id="@+id/imageViewIcon2"
-	                            android:layout_width="wrap_content"
-	                            android:layout_height="wrap_content"
+	                            android:layout_width="match_parent"
+	                            android:layout_height="0dp"
+	                            android:gravity="center_horizontal"
 	                            android:layout_weight="1"
 	                            android:scaleType="fitCenter"
 	                            android:src="@drawable/apartments_256" />
@@ -131,8 +133,9 @@
 
 	                        <ImageView
 	                            android:id="@+id/imageViewIcon3"
-	                            android:layout_width="wrap_content"
-	                            android:layout_height="wrap_content"
+	                            android:layout_width="match_parent"
+	                            android:layout_height="0dp"
+	                            android:gravity="center_horizontal"
 	                            android:layout_weight="1"
 	                            android:scaleType="fitCenter"
 	                            android:src="@drawable/motels_256" />
@@ -168,8 +171,9 @@
 
 	                        <ImageView
 	                            android:id="@+id/imageViewIcon4"
-	                            android:layout_width="wrap_content"
-	                            android:layout_height="fill_parent"
+	                            android:layout_width="match_parent"
+	                            android:layout_height="0dp"
+	                            android:gravity="center_horizontal"
 	                            android:layout_weight="1"
 	                            android:scaleType="fitCenter"
 	                            android:src="@drawable/hostels_256" />
@@ -245,8 +249,9 @@
 
 	                                <ImageView
 	                                    android:id="@+id/imageViewIcon5"
-	                                    android:layout_width="fill_parent"
-	                                    android:layout_height="fill_parent"
+			                            android:layout_width="match_parent"
+			                            android:layout_height="0dp"
+			                            android:gravity="center_horizontal"
 	                                    android:layout_weight="1"
 	                                    android:scaleType="fitCenter"
 	                                    android:src="@drawable/rooms_256" />
@@ -282,8 +287,9 @@
 
 	                                <ImageView
 	                                    android:id="@+id/ImageView01"
-	                                    android:layout_width="fill_parent"
-	                                    android:layout_height="fill_parent"
+			                            android:layout_width="match_parent"
+			                            android:layout_height="0dp"
+			                            android:gravity="center_horizontal"
 	                                    android:layout_weight="1"
 	                                    android:scaleType="fitCenter"
 	                                    android:src="@drawable/camps_256" />
@@ -329,8 +335,9 @@
 
 	                                <ImageView
 	                                    android:id="@+id/imageViewIcon9"
-	                                    android:layout_width="match_parent"
-	                                    android:layout_height="fill_parent"
+			                            android:layout_width="match_parent"
+			                            android:layout_height="0dp"
+			                            android:gravity="center_horizontal"
 	                                    android:layout_weight="1"
 	                                    android:scaleType="fitCenter"
 	                                    android:src="@drawable/long_term_256" />
@@ -366,8 +373,9 @@
 
 	                                <ImageView
 	                                    android:id="@+id/imageViewIcon7"
-	                                    android:layout_width="fill_parent"
-	                                    android:layout_height="fill_parent"
+			                            android:layout_width="match_parent"
+			                            android:layout_height="0dp"
+			                            android:gravity="center_horizontal"
 	                                    android:layout_weight="1"
 	                                    android:scaleType="fitCenter"
 	                                    android:src="@drawable/rentlocal_256" />
