--- a/ZoomAndroid/res/layout-normal/page_main.xml
+++ b/ZoomAndroid/res/layout-normal/page_main.xml
@@ -186,8 +186,8 @@
 
                         <ImageView
                             android:id="@+id/imageViewIcon3"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
+                            android:layout_width="match_parent"
+                            android:layout_height="0dp"
                             android:layout_weight="1"
                             android:scaleType="fitCenter"
                             android:src="@drawable/city_zoom_256" >
@@ -567,8 +567,9 @@
 
                         <ImageView
                             android:id="@+id/imageViewIcon4"
-                            android:layout_width="wrap_content"
-                            android:layout_height="fill_parent"
+                            android:layout_width="match_parent"
+                            android:layout_height="0dp"
+                            android:gravity="center_horizontal"
                             android:layout_weight="1"
                             android:scaleType="fitCenter"
                             android:src="@drawable/business_directory_256" >
