--- a/ZoomAndroid/res/layout/page_pice.xml
+++ b/ZoomAndroid/res/layout/page_pice.xml
@@ -8,6 +8,7 @@
 <!-- 		android:layout_width="fill_parent"  -->
 <!-- 		layout="@layout/layout_top_button"></include> -->
 
+
 	<ScrollView
 	    android:id="@+id/scrollView1"
 	    android:layout_width="fill_parent"
@@ -18,7 +19,12 @@
 	        android:layout_width="fill_parent"
 	        android:layout_height="wrap_content"
 	        android:orientation="vertical" >
-
+			
+			<include
+				android:id="@+id/toolbar"
+				layout="@layout/toolbar" >
+			</include>
+			
 	        <LinearLayout
 	            android:id="@+id/linearLayout1"
 	            android:layout_width="fill_parent"
@@ -47,8 +53,9 @@
 
 	                        <ImageView
 	                            android:id="@+id/imageViewIcon1"
-	                            android:layout_width="wrap_content"
-	                            android:layout_height="wrap_content"
+	                            android:layout_width="match_parent"
+	                            android:layout_height="0dp"
+	                            android:gravity="center_horizontal"
 	                            android:layout_weight="1"
 	                            android:scaleType="fitCenter"
 	                            android:src="@drawable/caffe_256" />
@@ -84,8 +91,9 @@
 
 	                        <ImageView
 	                            android:id="@+id/imageViewIcon2"
-	                            android:layout_width="wrap_content"
-	                            android:layout_height="wrap_content"
+	                            android:layout_width="match_parent"
+	                            android:layout_height="0dp"
+	                            android:gravity="center_horizontal"
 	                            android:layout_weight="1"
 	                            android:scaleType="fitCenter"
 	                            android:src="@drawable/restaurants_256" />
@@ -118,8 +126,9 @@
 
 	                        <ImageView
 	                            android:id="@+id/imageViewIcon3"
-	                            android:layout_width="wrap_content"
-	                            android:layout_height="wrap_content"
+	                            android:layout_width="match_parent"
+	                            android:layout_height="0dp"
+	                            android:gravity="center_horizontal"
 	                            android:layout_weight="1"
 	                            android:scaleType="fitCenter"
 	                            android:src="@drawable/fastfood_256" />
