--- a/ZoomAndroid/res/layout/page_map_view.xml
+++ b/ZoomAndroid/res/layout/page_map_view.xml
@@ -2,18 +2,16 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/FrameLayout1"
-    android:layout_width="fill_parent"
-    android:layout_height="fill_parent"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
     tools:context=".MainActivity" >
-
-
-	
+    
     <fragment
         android:id="@+id/map"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         class="com.google.android.gms.maps.MapFragment" />
-
+    
     <LinearLayout
         android:id="@id/linearLayoutProgres"
         android:layout_width="wrap_content"
@@ -35,7 +33,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:padding="10dp" >
-
+        
         <Button
             android:minHeight="0dp"
 			android:minWidth="0dp"
