--- a/ZoomAndroid/res/layout/dialog.xml
+++ b/ZoomAndroid/res/layout/dialog.xml
@@ -12,10 +12,11 @@
         <ImageView
             android:id="@+id/dialog_image"
             android:layout_width="match_parent"
-            android:layout_height="120dp"
+            android:layout_height="140dp"
             android:contentDescription="@string/app_name"
             android:scaleType="fitCenter"
-            android:src="@drawable/logo" />
+            android:src="@drawable/logo"
+            android:layout_marginBottom="8dp" />
 
         <TextView
             android:id="@+id/dialog_text"
