--- a/ZoomAndroid/res/layout/dialog.xml
+++ b/ZoomAndroid/res/layout/dialog.xml
@@ -8,6 +8,16 @@
         android:layout_height="wrap_content"
         android:orientation="vertical"
         android:padding="20dp" >
+        
+        <TextView
+            android:id="@+id/dialog_title"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textSize="20sp"
+            android:gravity="center"
+            android:layout_marginBottom="15dp"
+            android:text="@string/test_string_short"
+            android:textColor="#000000" />
 
         <ImageView
             android:id="@+id/dialog_image"
