--- a/ZoomAndroid/res/layout/dialog.xml
+++ b/ZoomAndroid/res/layout/dialog.xml
@@ -24,7 +24,7 @@
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="800dp"
+            android:layout_height="match_parent"
             android:orientation="vertical"
             android:paddingBottom="10dp"
             android:paddingLeft="20dp"
@@ -42,16 +42,16 @@
             <WebView
                 android:id="@+id/dialog_webview"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent" />
+                android:layout_height="wrap_content" />
 
-            <TextView
-                android:id="@+id/dialog_text"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:gravity="fill_horizontal"
-                android:text="@string/test_string_short"
-                android:textColor="#000000"
-                android:visibility="gone" />
+<!--             <TextView -->
+<!--                 android:id="@+id/dialog_text" -->
+<!--                 android:layout_width="match_parent" -->
+<!--                 android:layout_height="wrap_content" -->
+<!--                 android:gravity="fill_horizontal" -->
+<!--                 android:text="@string/test_string_short" -->
+<!--                 android:textColor="#000000" -->
+<!--                 android:visibility="gone" /> -->
         </LinearLayout>
     </ScrollView>
 
