added transit pages
Transit pages for selected activities in the app

--- a/ZoomAndroid/res/layout/activity_my_ad.xml
+++ b/ZoomAndroid/res/layout/activity_my_ad.xml
@@ -4,14 +4,6 @@
     android:layout_height="match_parent"
     tools:context="zoom.city.android.main.MyAdActivity" >
 
-    <Button 
-        android:id="@+id/button_close"
-        android:layout_height="35dp"
-        android:layout_width="35dp"
-        android:layout_marginLeft="10dp"
-        android:layout_marginTop="10dp"
-        android:text="X"/>
-    
     <ImageView 
         android:id="@+id/image_view_my_ad"
         android:layout_height="match_parent"
@@ -19,5 +11,14 @@
         android:contentDescription="@string/abc_action_bar_home_description"
         android:src="@drawable/city_zoom_256"
         />
-
+    
+    <ImageView
+        android:id="@+id/new_id_for_image_view_close"
+        android:layout_height="50dp"
+        android:layout_width="50dp"
+        android:layout_marginLeft="10dp"
+        android:layout_marginTop="10dp"
+        android:contentDescription="@string/abc_action_bar_home_description"
+        android:src="@android:drawable/btn_dialog"/>
+    
 </RelativeLayout>
